@@ -105,6 +105,9 @@
 # 3 - MESSAGE_TEMPFAIL
 # 4 - MESSAGE_TEMPFAIL_TARPIT
 #
+# Note that if the content filter suffers an internal system error, it will
+# return MESSAGE_TEMPFAIL.
+#
 #CONTENT_FILTER			PATH
 
 # Optional URL for the SMTP data banner for failed or tempfailed DATA requests
@@ -211,6 +214,11 @@
 # Default is 0, or unlimited.
 #
 #MAX_FAILED_RCPTS		0
+
+# Set the type of punishment for exceeding MAX_FAILED_RCPTS.
+#
+#FAILED_RCPT_PUNISHMENT		[ TEMPFAIL | TARPIT ]
+#FAILED_RCPT_PUNISHMENT		TEMPFAIL
 
 # If WAIT_SECONDS is non-zero, pause before the SMTP banner.  If the client
 # attempts to write before reading the banner, it is punished with the banner
